<resources>
    <string name="app_name">NUMAD23Sp_Team16</string>
    <string name="team16">Team16</string>
    <string name="a6_at_your_service_button">A6 At Your Service</string>
    <string name="country_name">Country Name:</string>
    <string name="ping_web_service_button">Ping Web Service</string>
    <string name="show_list_of_translations">Show list of translations</string>
    <string name="show_currency">Show currency</string>
    <string name="show_flag">Show flag</string>
    <string name="show_capital_city">Show capital city</string>
    <string name="united_states">United States</string>
    <string name="capital">Capital:</string>
    <string name="currency">Currency:</string>
    <string name="flag_sample">flag_sample</string>
    <string name="flag">Flag:</string>
    <string name="official_name">Official Name:</string>
    <string name="translations">Translations:</string>
    <string name="country_image_icon">country_image_icon</string>
    <string name="about">About</string>
    <string name="macee_qi">Macee Qi</string>
    <string name="yutong_he">Yutong He</string>
    <string name="yuan_kuang">Yuan Kuang</string>

    <string name="send_a_sticker">send a sticker</string>
    <string name="tap_a_sticker_and_send_to_friend">tap a sticker and send to friend</string>

    <string name="a8_stick_it_to_em_button">A8 Stick It To \'Em</string>
    <string name="login_title">Login to Stick It To \'Em</string>
    <string name="username_hint">Username</string>
    <string name="close_string">Close</string>
    <string name="login_button">Login</string>
    <string name="sender_logged_in_user">Sender: logged in user</string>
    <string name="receiver_a">Receiver A</string>
    <string name="receiver_b">Receiver B</string>
    <string name="sticker">sticker</string>
    <string name="receiver">receiver</string>
    <string name="sticker_option_1">Sticker Option 1</string>
    <string name="sticker_option_2">Sticker Option 2</string>
    <string name="select_a_sticker">Select a sticker</string>
    <string name="reset_users">Reset Users</string>
    <string name="send_sticker">send sticker</string>
    <string name="receiver1">receiver1</string>
    <string name="receiver2">receiver2</string>
    <string name="received_count">received count</string>
    <string name="sender">sender:</string>
    <string name="current_user">current user</string>
    <string name="show_counts_of_sent_stickers">Show Counts of Sent Stickers</string>
    <string name="history_of_stickers_received">HISTORY OF STICKERS RECEIVED:</string>
    <string name="show_history_of_stickers_received">Show History of Stickers Received</string>
    <string name="recently_sent_sticker">recently sent sticker:</string>
    <string name="_0">0</string>
    <string name="counts_of_stickers_sent">COUNTS OF STICKERS SENT:</string>
    <string name="profile">Profile</string>
    <string name="project">Project</string>
    <string name="share">Share</string>
    <string name="user_profile">User Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="pet_name">Pet Name</string>
    <string name="current_pet">Current Pet:</string>
    <string name="save_updates">Save Updates</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="add_friends">Add Friends</string>
    <string name="send_my_pet_status_to_friends">Send Pet Status</string>
    <string name="list_of_users">List of Users</string>
    <string name="add_all_selected_users_as_friends">Select users and add them as your new friends!</string>
    <string name="send_my_pet_status_to_selected_friends">Select friends and send your pet status to them!</string>
    <string name="project_app_name">GoalForIt!</string>
    <string name="create_new_goal_string">Create a New Goal</string>
    <string name="name_title_string">Name</string>
    <string name="icon_title_string">Icon:</string>
    <string name="reminder_string">Reminder:</string>
    <string name="set_reminder_message_title">Set a reminder message:</string>
    <string name="set_reminder_time_title">Set a reminder time:</string>
    <string name="cancel_string">Cancel</string>
    <string name="save_string">Save</string>
    <string name="start_string">Start:</string>
    <string name="end_string">End:</string>
    <string name="priority_string">Priority:</string>
    <string name="memo_title_string">Memo:</string>
    <string name="save_button_string">Save</string>
    <string name="add_a_habit">Add a Habit</string>
    <string name="check_progress_button">Check Progress</string>
    <string name="share_pet_status_string">Share Pet Status</string>
    <string name="your_progress_title_string">Your Progress</string>
    <string name="completed_goals_info_string">Days you completed all daily goals</string>
    <string name="current_date_info_string">Today\'s date</string>
    <string name="goalforit">GoalForIt!</string>
    <string name="i_am_a_new_user">I am a new user ...</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="save">Save</string>
    <string name="finished_it_today">Finished it today?</string>
    <string name="my_friends">My Friends</string>
    <string name="log_out">Log Out</string>
  
</resources>