<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/set_reminder_dialog"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="7dp">

    <TextView
        android:id="@+id/title_reminder_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder_message_title"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/text_reminder_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/title_reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder_time_title"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/reminder_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="displayReminderInfo"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:src="@drawable/ic_clock"/>

        <EditText
            android:id="@+id/text_reminder_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_set_reminder_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/grey"
            android:text="@string/cancel_string"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/button_set_reminder_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/grey"
            android:text="@string/save_string"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginStart="20dp"/>

    </LinearLayout>



</LinearLayout>