<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fadeScrollbars="false" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Project.AddFriendsActivity">

        <TextView
            android:id="@+id/user_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:text="@string/list_of_users"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/userlist_recyclerview"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userlist_recyclerview"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:padding="2dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_selected_friends_button"
            app:layout_constraintTop_toBottomOf="@+id/user_list_title"
            app:layout_constraintWidth_default="percent" />

        <Button
            android:id="@+id/add_selected_friends_button"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/pink"
            android:text="@string/add_all_selected_users_as_friends"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userlist_recyclerview" />

        <Button
            android:id="@+id/send_status_button"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/pink"
            android:text="@string/send_my_pet_status_to_selected_friends"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userlist_recyclerview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
